@@ -1,5 +1,6 @@
 v0.6.3
 - Identify artwork with AD filenames
+- Run full automatic process more often if filesystem only
 - Fix series banner sort
 
 v0.6.2 (2016-09-08)
